[package]
name = "ferrous-simple-calc"
version = "0.2.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"
description = "Example crate: simple calculator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ferrous-systems/ferrous-simple-calc"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
std = []
provide-panic = []

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
